C-html-css, capitulo 2 del curso de html-css

--- a/contacto.html
+++ b/contacto.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>curso</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Contacto</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>contacto</h1>
     <ul>
-        <li><a href="./contacto.html">contacto</a></li>
+        <li><a href="./index.html">main</a></li>
     </ul>
 </body>
 </html>
