C-html-css, capitulo 3 del curso de html-css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>curso</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animations.css">
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <ul>
-        <li><a href="./contacto.html">contacto</a></li>
-    </ul>
+    <nav class="fadeInDown">
+        <div class="conteiner-image">
+            <img src="./images/img-nav.png" alt="">
+        </div>
+        <ul class="list">
+            <li><a href="">Faqs</a></li>
+            <li><a href="">Producto y descripcion</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <div class="conteiner-title">
+            <h1 class="title">Titulo Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, suscipit!</h1>
+        </div>
+        <section class="products">
+            <div class="products-card">
+                <img src="./images/img-card.jpg" width="150" height="150" alt="">
+                <h2>Producto 1</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, omnis?</p>
+                <a href="">Lo quiero!</a>
+            </div>
+            <div class="products-card">
+                <img src="./images/img-card.jpg" width="150" height="150" alt="">
+                <h2>Producto 2</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus, omnis?</p>
+                <a href="">Lo quiero!</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
