--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
             </div>
         </section>
     </main>
+
+    <footer class="site-footer">
+        <div class="container-footer">
+          <p>&copy; 2024. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
